Fix ASK queries for literals + same triples in queries. Add a cost model to select the best plans between UoJ and JoU (not working with sa-cost).